# MiniRTOS

./: .gitignore  AGENT_HANDOFF.md  BOARD_PORTING_GUIDE.md  CODEX_LOG.md  Cargo.toml  DEVELOPER_GUIDE.md  DEVELOPMENT_PLAN.md  DEV_LOG.md  PROJECT_CONTEXT.md  Prompt.md  README.md  TESTING.md  TEST_LOG.md  USER_GUIDE.md  build.rs  memory.x  rules.md  serial_io_test.ps1  串口反馈数据.txt
.cargo/: config.toml
app_smoke_runs/20260402_181040_f103rct6-generic/: smoke_meta.json
app_smoke_runs/20260402_182236_f103rct6-generic/: smoke_meta.json
app_smoke_runs/20260402_182608_f103rct6-generic/: smoke_meta.json
app_smoke_runs/20260402_183721_f103rct6-generic/: smoke_meta.json
app_smoke_runs/20260410_182202_f103rct6-generic/: smoke_meta.json
app_smoke_runs/20260410_183106_f103rct6-generic/: summary.json
app_smoke_runs/20260410_184143_f103rct6-generic/: smoke_meta.json  summary.csv
app_smoke_runs/20260414_141206_f103rct6-generic/: smoke_meta.json
app_smoke_runs/20260414_141327_f103rct6-generic/: smoke_meta.json
host_tests/: Cargo.toml
memory/: f103c8-bluepill.x  f411-nucleo.x
scripts/: board_profiles.json  build_board.md  build_board.ps1  collect_release_bench.md  collect_release_bench.ps1  flash_board.md  flash_board.ps1  new_board_scaffold.md  new_board_scaffold.ps1  run_app_smoke.md  run_app_smoke.ps1  run_host_tests.md  run_host_tests.ps1  run_multiboard_regression.md  run_multiboard_regression.ps1  soak_default_app.md  soak_default_app.ps1  start_24h_soak.md  start_24h_soak.ps1
src/: app.rs  app_protocol.rs  bench.rs  kernel.rs  log.rs  main.rs  uart_probe.rs
(+475 files in other folders)
