[package]
name = "CortexOS"
version = "0.1.0"
edition = "2024"

[features]
default = ["board-f411-nucleo"]
board-f411-nucleo = ["dep:stm32f4xx-hal"]
board-f103c8-bluepill = ["dep:stm32f1"]
bench = []
uart-probe = []

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "1.0.0"
fugit = "0.3"
embedded-hal = "1.0.0"

[dependencies.stm32f4xx-hal]
version = "0.23.0"
features = ["stm32f411"]
optional = true

[dependencies.stm32f1]
version = "0.16.0"
features = ["stm32f103", "rt"]
optional = true

[build-dependencies]
cc = "1.0"

[profile.dev]
codegen-units = 1
debug = true
lto = false

[profile.release]
codegen-units = 1
debug = true
lto = true
